--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="app_name">Countdown</string>
     <string name="about">🐱 Countdown / developed by plavelo</string>
     <string name="reset">Reset</string>
+    <string name="finished">Time\'s up!!</string>
     <string name="icon_backspace">Backspace</string>
     <string name="icon_about">About this app</string>
     <string name="icon_menu">Open the keypad</string>
